<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoom">


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView_e"
        android:layout_above="@id/messageEdit"/>

    <EditText
        android:id="@+id/messageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@id/sendBtn"
        android:layout_toLeftOf="@id/sendBtn"
        android:background="@drawable/edittext_design"
        android:hint="Message..."
        android:padding="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:text="Send"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        android:layout_alignParentRight="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_image_24"
        android:tint="@color/colorPrimaryDark"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/messageEdit"
        android:layout_marginBottom="16dp"
        android:id="@+id/pickImgBtn"
        android:layout_alignParentEnd="true"
        tools:ignore="UseAppTint"
        android:layout_toRightOf="@id/messageEdit"
        android:layout_alignParentRight="true" />




</RelativeLayout>