<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"

        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:visible="true" />

    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_post"
        android:title="@string/title_post"
        android:visible="true" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat"
        android:visible="true" />
</menu>