<resources>
    <string name="app_name">UBC Residence Room Exchange App</string>
    <string name="location_button_caption">Get Location Permissions</string>
    <string name="maps_button_caption">My Home Town</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_out_button_caption">Sign out</string>
    <string name="request_time_button_caption">Time of Server</string>
    <string name="time_displayer"> </string>
    <string name="calendar_button_caption">View Calendar</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_chat">Chat</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="retrieve_token">Retrieve Token</string>
    <string name="handle_notification_now">Someone just viewed your posts!</string>
    <string name="username">username</string>
    <string name="pickImg_buttton">image</string>






    <string name="residence_prompt">Choose a Residence</string>

    <string-array name="residence_arrays">
        <item>Place Vanier</item>
        <item>Totem Park</item>
        <item>Orchard Commons</item>
        <item>Ritsumeikan-UBC House</item>
        <item>Walter Gage</item>
        <item>Fairview Crescent</item>
        <item>Marine Driver</item>
        <item>Fraser Hall</item>
        <item>Ponderosa Commons</item>
        <item>Thunderbird</item>
        <item>lona House</item>
        <item>Brock Commons - Tallwood House</item>
        <item>Exchange</item>
        <item>Student Family Residence</item>
        <item>Graduate Colleges</item>
    </string-array>

    <string name="types_prompt">Choose a Residence</string>

    <string-array name="types_arrays">
        <item>Shared Room</item>
        <item>Connect Single Room</item>
        <item>Single Traditional Room</item>
        <item>Six Bedroom Suite</item>
        <item>Four Bedroom Suit</item>
        <item>Three Bedroom Suit</item>
        <item>Two Bedroom Suit</item>
        <item>One Bedroom Suit</item>
        <item>Studio Suit</item>
        <item>Nano Suit</item>
        <item>Townhouset</item>
        <item>Student Families</item>
    </string-array>

    <string name="text_msg_one">Distrubution of residences to rent</string>


</resources>