<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/wholepage"
    tools:context=".MapsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8bcdcd"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="#3797a4"
            android:text="Location"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/search_loc_spi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/residence_arrays"
            android:prompt="@string/residence_prompt" />

        <TextView
            android:id="@+id/types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="#3797a4"
            android:text="Types"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/search_types_spi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/types_arrays"
            android:prompt="@string/types_prompt" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="#3797a4"
            android:text="Price"
            android:textSize="25dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/search_price_edi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:maxLength="4"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10000" />

        <Button
            android:id="@+id/search_submit_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cee397"
            android:text="Submit"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="413dp"
        android:layout_height="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="#3797a4"
        android:text="@string/text_msg_one"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:gravity="center_horizontal" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animationCache="false"
        android:background="#6CA7C1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />



</androidx.constraintlayout.widget.ConstraintLayout>


